Actualizando estilo y agregando traducciones de layouts y vista welcome

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -1,5 +1,32 @@
 {
+    "Home": "Inicio",
+    "Dashboard": "Panel",
+    "Administrative Dashboard": "Panel administrativo",
+    "Log In": "Iniciar sesión",
+    "Log Out": "Cerrar sesión",
+    "Logout": "Cerrar sesión",
+    "Select *Logout* below if you are ready to end your current session.": "Seleccione *Cerrar sesión* a continuación si está listo(a) para finalizar su sesión actual.",
+    "Sign in": "Registrarse",
     "English": "Inglés",
     "Spainsh": "Español",
-    "Home": "Inicio"
+    "Project developed by": "Proyecto desarrollado por",
+    "Users": "Usuarios",
+    "List": "Listado",
+    "Add": "Agregar",
+    "Roles": "Roles",
+    "Products": "Productos",
+    "Profile": "Perfil",
+    "Ready to Leave?": "¿Lista(o) para irse?",
+    "Account settings": "Configuración de la cuenta",
+    "API Tokens": "Fichas de API",
+    "Switch teams": "Cambiar equipos",
+    "Create new team": "Crear nuevo equipo",
+    "Team settings": "Configuración de equipos",
+    "Manage team": "Gestión de equipos",
+    "Close": "Cerrar",
+    "Cancel": "Cancelar",
+    "Electronic commerce": "Comercio electrónico",
+    "Online store project. It serves as the basis for any project.": "Proyecto de tienda online. Sirve de base para cualquier proyecto.",
+    "Developed with Laravel 8.*, includes Laravel Jetstream authentication system and Bootstrap 5 design toolkit.": "Desarrollado con Laravel 8.*, incluye sistema de autenticación de Laravel Jetstream y kit de herramientas diseño de Bootstrap 5.",
+    "Go to the store": "Ir a la tienda"
 }
