--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -28,5 +28,9 @@
     "Electronic commerce": "Comercio electrónico",
     "Online store project. It serves as the basis for any project.": "Proyecto de tienda online. Sirve de base para cualquier proyecto.",
     "Developed with Laravel 8.*, includes Laravel Jetstream authentication system and Bootstrap 5 design toolkit.": "Desarrollado con Laravel 8.*, incluye sistema de autenticación de Laravel Jetstream y kit de herramientas diseño de Bootstrap 5.",
-    "Go to the store": "Ir a la tienda"
+    "Go to the store": "Ir a la tienda",
+    "Email": "Correo electrónico",
+    "Password": "Contraseña",
+    "Remember me": "Recuérdame",
+    "Forgot your password?": "¿Olvidó contraseña?"
 }
