--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -39,5 +39,17 @@
     "All rights reserved.": "Todos los derechos reservados.",
     "If you're having trouble clicking the \":actionText\" button, copy and paste the URL below\n into your web browser:": "Si tiene problemas para hacer clic en el botón \":actionText\", copie y pegue la siguiente URL\n en su navegador web:",
     "Reset password": "Restablecer contraseña",
-    "Confirm password": "Confirmar contraseña"
+    "Confirm password": "Confirmar contraseña",
+    "Register": "Registrarse",
+    "User register": "Registro de usuario",
+    "Firtsname": "Nombres",
+    "Lastname": "Apelidos",
+    "Document type": "Tipo de documento",
+    "Document number": "Número de documento",
+    "Country code": "Código de país",
+    "Phone number": "Número de teléfono",
+    "Address": "Dirección",
+    "Username": "Usuario",
+    "Attach": "Adjunto",
+    "Already registered? Log in":"¿Ya estás registrado(a)? Inicia sesión"
 }
